<resources>
    <string name="app_name">AndroidLevel1</string>
    <string name="textview">Hello, GB!</string>
    <string name="write_here">Write here</string>
    <string name="button">Send</string>
    <string name="on">On</string>
    <string name="Show">Show all</string>
    <string name="togglebutton">OFF</string>
    <string name="next">Next</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="zero">0</string>
    <string name="division">/</string>
    <string name="multiplication">*</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="point">.</string>
    <string name="equality">=</string>
</resources>