<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:columnCount="4"
    android:rowCount="4">

    <Button
        android:id="@+id/button7"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/_7"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_rowWeight="1"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/_8"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_rowWeight="1"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/_9"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_division"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_rowWeight="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/division"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_rowWeight="1"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/_4"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_rowWeight="1"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/_5"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_rowWeight="1"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/_6"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_multiplication"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/multiplication"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_rowWeight="1"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/_1"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_rowWeight="1"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/_2"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_rowWeight="1"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/_3"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_subtraction"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_rowWeight="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/subtraction"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_point"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_rowWeight="1"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/point"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_zero"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_rowWeight="1"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/zero"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_equality"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_rowWeight="1"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/equality"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_rowWeight="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/addition"
        android:textColor="@color/white"
        android:textSize="24sp" />


</GridLayout>